kubernetes/drfarah-staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: drfarah-staging
  labels:
    app.kubernetes.io/name: drfarah
    app.kubernetes.io/part-of: drfarah-vip-urgent-care
    app.kubernetes.io/managed-by: jenkins
    app.kubernetes.io/environment: staging
